Bug 695895 - gsview crashes intermittently
Summary: gsview crashes intermittently
Status: RESOLVED FIXED
Alias: None
Product: Artifex GSview
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Macintosh All
: P4 normal
Assignee: Fred Ross-Perry
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-01 09:00 UTC by Henry Stiles
Modified: 2016-06-15 10:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henry Stiles 2015-04-01 09:00:49 UTC

    
Comment 1 Henry Stiles 2015-04-01 09:19:37 UTC
opening the pdf reference on the mac crashes "occasionally"... test file in my home on casper pdf_reference_1-17.pdf.  I might have added an annotation or something to this pdf, the file date looks suspicious but it works fine in preview and acrobat.


Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0   com.artifex.gsview            	0x000000010f43ef12 pdf_is_string + 34
1   com.artifex.gsview            	0x000000010f40a28b pdf_parse_file_spec + 171
2   com.artifex.gsview            	0x000000010f40a6a2 pdf_parse_action + 962
3   com.artifex.gsview            	0x000000010f40aa61 pdf_load_link + 369
4   com.artifex.gsview            	0x000000010f40a822 pdf_load_link_annots + 258
5   com.artifex.gsview            	0x000000010f4560df pdf_load_page + 1871
6   com.artifex.gsview            	0x000000010f398b88 fz_load_page + 72
7   com.artifex.gsview            	0x000000010f33bf8f muctx::MeasurePage(int, point_s*) + 127
8   com.artifex.gsview            	0x000000010f34fb39 Document::GetPageSize(int, double, point_s*) + 25
9   com.artifex.gsview            	0x000000010f352375 ScrollingImageList::buildImages() + 293
10  com.artifex.gsview            	0x000000010f3436b7 Window::OpenFile2(QString) + 535
11  com.artifex.gsview            	0x000000010f342690 Window::OpenFile(QString) + 6064
12  com.artifex.gsview            	0x000000010f34465c Window::open() + 1292
13  com.artifex.gsview            	0x000000010f36c186 GSViewApp::onStarted() + 438
14  org.qt-project.QtCore         	0x0000000110e247ab QMetaObject::activate(QObject*, int, int, void**) + 2987
15  org.qt-project.QtCore         	0x0000000110e2aef9 0x110bb4000 + 2584313
16  org.qt-project.QtCore         	0x0000000110e1d0d0 QObject::event(QEvent*) + 48
17  org.qt-project.QtWidgets      	0x000000011005932b QApplicationPrivate::notify_helper(QObject*, QEvent*) + 251
Comment 2 Fred Ross-Perry 2015-04-01 11:29:52 UTC
The issue is that pdf_parse_file_spec has an uninitialized variable.

    pdf_obj *filename;

should be

    pdf_obj *filename=NULL;
Comment 3 Fred Ross-Perry 2015-04-01 11:40:16 UTC
fixed with commit f4590b1fe1dac863d725447d4f90fe8f2048580a
in fred@ghostscript.com:repos/mupdf.git
Comment 4 Fred Ross-Perry 2015-07-15 14:30:29 UTC
This fix was adopted in a different commit.  Maybe this bug can be closed.