fix bug #695895.  Uninitialized variable in pdf_parse_file_spec